bubba-backend (2.2.23) vincent hugo; urgency=low

  * Correctify the system backup of user backup settings

 -- Carl Fürstenberg <carl@excito.com>  Fri, 03 Jun 2011 14:58:37 +0200

bubba-backend (2.2.22) vincent hugo; urgency=low

  * Do not restore firewall in postinst

 -- Carl Fürstenberg <carl@excito.com>  Mon, 30 May 2011 18:50:56 +0200

bubba-backend (2.2.21) vincent hugo; urgency=low

  * Adding python helper to list printers

 -- Carl Fürstenberg <carl@excito.com>  Mon, 30 May 2011 17:39:32 +0200

bubba-backend (2.2.20) vincent hugo; urgency=low

  * Add ServerAlias *

 -- Carl Fürstenberg <carl@excito.com>  Mon, 30 May 2011 16:38:42 +0200

bubba-backend (2.2.19) vincent hugo; urgency=low

  * Change workgroup from "excito" to WORKGROUP
  * Add missing depends on libconfig-tiny-perl

 -- Carl Fürstenberg <carl@excito.com>  Thu, 26 May 2011 16:52:00 +0200

bubba-backend (2.2.18) vincent hugo; urgency=low

  * Printer usabillity change

 -- Carl Fürstenberg <carl@excito.com>  Wed, 25 May 2011 15:38:14 +0200

bubba-backend (2.2.17) vincent hugo; urgency=low

  * convert target ftp to lowercase

 -- Carl Fürstenberg <carl@excito.com>  Mon, 23 May 2011 17:07:46 +0200

bubba-backend (2.2.16) vincent hugo; urgency=low

  * backup password environment fixes

 -- Carl Fürstenberg <carl@excito.com>  Mon, 23 May 2011 16:35:45 +0200

bubba-backend (2.2.13) vincent hugo; urgency=low

  * Adding check in dhclient exit hook for samba to not restart if IP hasn't
    changed (Closes: 1651) 

 -- Carl Fürstenberg <carl@excito.com>  Tue, 12 Apr 2011 13:43:01 +0200

bubba-backend (2.2.12) vincent hugo; urgency=low

  * adding igd functionallity 

 -- Carl Fürstenberg <carl@excito.com>  Fri, 08 Apr 2011 17:11:49 +0200

bubba-backend (2.2.11) vincent hugo; urgency=low

  * Fix Bubba|2/Bubba|Two to B3 strings 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 31 Mar 2011 11:37:40 +0200

bubba-backend (2.2.10) vincent hugo; urgency=low

  * Specify permissions for afd shares
